# flaskmvcmini

./: AUTHOR.md  LICENSE  README.md  USER_GUIDE.md  __main__.py  generator.py  pyproject.toml
flaskmvcmini/: __main__.py  cli.py  generator.py  main.py
flaskmvcmini/templates/: app.py.tpl  controller.py.tpl  data.csv.tpl  index.html.tpl  model.py.tpl  run.sh.tpl
