[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "flaskmvcmini"
version = "4.0.0"

description = "Minimal Flask MVC Project Generator"

readme = "README.md"

requires-python = ">=3.10"

authors = [
    {name = "Rajendra Prakash Agrawal"}
]

keywords = [
    "flask",
    "mvc",
    "csv",
    "generator"
]

dependencies = [
    "Flask"
]


classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License"
]


[project.scripts]
flaskmvcmini = "flaskmvcmini.cli:c_main"
